Email overlap to date on vendor and customer fix

--- a/src/app/templates/modules/vendor-and-customer/components/vendor-and-customer-list/vendor-and-customer-list.component.scss
+++ b/src/app/templates/modules/vendor-and-customer/components/vendor-and-customer-list/vendor-and-customer-list.component.scss
@@ -1,16 +1,11 @@
 
-@import "_common";
-/*
-  @media screen and (min-device-width: 320px) and (max-device-width: 767px){
-  .back-colr{float:left;}
-  body{font-size: 12px;}
-  .table>thead>tr>th, .table>tbody>tr>td{font-size: 11px;}
-  table>thead>tr>th>div.custom-control{position: relative;
-    top: 17px;}
-  }
-*/
+@import "_base";
 
-.button {
+
+#outer-div{ 
+   height: 5vh; 
+}
+.create-button {
   float: right;
   color: $white;
   background: $btn-bg;
@@ -19,55 +14,162 @@
   border-radius: 25px;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+#table-outer-div thead th { 
+  position: sticky; 
+  top: 0; 
 }
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+
+/* Just common table stuff. Really. */
+table  { 
+  border-collapse: collapse; 
+  width: 100%; 
+}
+th { 
+  background:$table-header-bg; 
+}
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+thead {
+  background-color: $table-header-bg;
 }
 tbody {
-  padding-bottom: 70px !important;
+  background-color:$table-invoived-row-bg; 
+  height: 60vh !important;
+}
+.table>thead>tr>th{
+  font-size: $table-font-size;
+  border-top: 0px solid $main-bg;
+  border-bottom:10px solid $main-bg;
+  color:$table-header-font;
+} 
+.table>tbody>tr>td{
+  font-size: $table-font-size;
+  border-top:5px solid $main-bg;   
+  color:$table-row-font-color;
 }
 .table > tbody > tr:hover {
   background-color: $header-bg;
-  padding-bottom: 50px;
 }
-
 .table > tbody > tr:hover, .table > tbody > tr:hover span  {
   background-color: $header-bg;
 }
-
-
-.grid-align{position: absolute; height: 100vh; top:60px; width: 98%; }
-.header-align{position: absolute;
-  top: 20px;
-  width: 70%;}
-.wid-50px{width: 50px!important;}
-.wid-110px{width: 110px!important;}
-.wid-180px{width: 180px!important;}
-.wid-190px{width: 190px!important;}
-.wid-150px{width: 150px!important;}
-.font-bld{ font-weight: bold;}
-.font-norm{ font-weight: normal;}
-.mar-let-40px{margin-left: 40px;}
-
-.invoice-view {
-  margin-top: 0px;
+table tbody tr td span{
+  display: none;
 }
 
-.pdf-icon {
-  font-size: 18px;
-  color: inherit !important;
-  padding: 0px !important;
-  text-align: inherit !important;
+table tbody tr:hover td span{
+  display: block !important;
+}
+tr[ng-click] {
+  cursor: pointer;
+}
+.mar-let-40px{
+  margin: -18px 60px 0px 0px;
+  float: right;
+}
+.mar-let-30px{
+  margin: -18px 10px 0px 0px;
+  float: right;
 }
 
-.edit-delete-icon {
-  margin-top: 0 !important;
+.txt-right{
+  text-align:right; 
+  padding-right: 25px!important;
+}
+// iPhone media query start
+
+// iPhone 6, 7, & 8 in portrait & landscape
+@media only screen and (min-width: 375px) and (max-width: 667px) { 
+  h3 {
+     font-size:12px;
+  }
+ .table>tbody>tr>td{
+    font-size:10px;
+  }
+  .table>thead>tr>th{
+   font-size:10px;
+  } 
+}
+
+ // iPhone 6, 7, & 8 Plus in portrait & landscape
+@media only screen and (min-width: 414px) and (max-width: 736px) { 
+  h3 {
+     font-size:12px;
+  }
+  .table>tbody>tr>td{
+    font-size:10px;
+  }
+  .table>thead>tr>th{
+    font-size:10px;
+  } 
 }
 
 
+ // iPhone X in landscape & iPhone X in portrait
+@media only screen and (min-width: 375px) and (max-width: 812px) { 
+  h3 {
+     font-size:12px;
+  }
+  .table>tbody>tr>td{
+    font-size:10px;
+  }
+  .table>thead>tr>th{
+    font-size:10px;
+  } 
+}
 
 
+// iPhone 5 & 5S in portrait & landscape
+@media only screen and (min-width: 320px) and (max-width: 568px) { 
+  h3 {
+     font-size:12px;
+  }
+  .table>tbody>tr>td{
+    font-size:10px;
+  }
+  .table>thead>tr>th{
+    font-size:10px;
+  } 
+}
+ // iPhone 2G-4S in portrait
+@media only screen and (min-width: 320px) and (max-width: 480px) { 
+  h3 {
+     font-size:12px;
+  }
+  .table>tbody>tr>td{
+    font-size:10px;
+  }
+  .table>thead>tr>th{
+    font-size:10px;
+  } 
+}
 
+// iPhone media query end
+
+// Galaxy S6
+
+// Xperia Z3
+
+// Lumia 920
+
+// Nexus 6
+
+// Iphone 6 Plus
+
+// Galaxy Note 4 
+
+// Galaxy Note II 
+
+// iPad Air
+
+// Galaxy Tab 2 10.1
+
+// Galaxy Nexus 7
+
+// Kindle Fire
+
+// Kindle Fire HD 7"
+
+// Kindle Fire HD 8.9"
